Update and build club

--- a/app/styles/club_relays.scss
+++ b/app/styles/club_relays.scss
@@ -4,6 +4,10 @@
   background: $gray;
   width: 100%;
 
+  .club-large {
+    @include large-body-text;
+  }
+
   .map-container {
     padding: 25px 0;
     height: 600px;
