--- a/app/styles/utilities/_typography.scss
+++ b/app/styles/utilities/_typography.scss
@@ -12,6 +12,20 @@
   }
 }
 
+@mixin large-body-text {
+  font-size: 22px;
+  line-height: 1.4;
+  padding: 5px 0;
+
+  @media (max-width: $break-sm) {
+    font-size: 20px;
+  }
+
+  @media (max-width: $break-xs) {
+    font-size: 16px;
+  }
+}
+
 @mixin table-text {
   font-size: 14px;
 
