--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -17,9 +17,7 @@
                 </div>
               </md-card-title-media>
             </md-card-title>
-            <md-card-actions class="card-actions" layout="row" layout-align="end center">
-              <span class="email">{{coach.email}}</span>
-              <span flex></span>
+            <md-card-actions layout="row" layout-align="end center">
               <md-button class="md-raised md-primary" ng-click="emailCoach(coach.email)">Email</md-button>
             </md-card-actions>
           </md-card>
@@ -39,9 +37,7 @@
                 </div>
               </md-card-title-media>
             </md-card-title>
-            <md-card-actions class="card-actions" layout="row" layout-align="end center">
-              <span class="email">{{coach.email}}</span>
-              <span flex></span>
+            <md-card-actions layout="row" layout-align="end center">
               <md-button class="md-raised md-primary" ng-click="emailCoach(coach.email)">Email</md-button>
             </md-card-actions>
           </md-card>
