--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -17,7 +17,9 @@
                 </div>
               </md-card-title-media>
             </md-card-title>
-            <md-card-actions layout="row" layout-align="end center">
+            <md-card-actions class="card-actions" layout="row" layout-align="end center">
+              <span class="email">{{coach.email}}</span>
+              <span flex></span>
               <md-button class="md-raised md-primary" ng-click="emailCoach(coach.email)">Email</md-button>
             </md-card-actions>
           </md-card>
@@ -37,7 +39,9 @@
                 </div>
               </md-card-title-media>
             </md-card-title>
-            <md-card-actions layout="row" layout-align="end center">
+            <md-card-actions layclass="card-actions" out="row" layout-align="end center">
+              <span class="email">{{coach.email}}</span>
+              <span flex></span>
               <md-button class="md-raised md-primary" ng-click="emailCoach(coach.email)">Email</md-button>
             </md-card-actions>
           </md-card>
