Remove old CSS and nom nom menu

--- a/app/styles/results.scss
+++ b/app/styles/results.scss
@@ -71,5 +71,17 @@
         float: right;
       }
     }
+
+    .searchbar-container {
+      padding-top: 20px;
+
+      .searchbar {
+        background: $white;
+      }
+    }
+
+    .md-autocomplete-suggestions-container li .highlight {
+      color: $orange;
+    }
   }
 }
