--- a/app/views/clubrelays.html
+++ b/app/views/clubrelays.html
@@ -10,7 +10,7 @@
 
       <div class="info">
         <div class="itc-h5">Registration Info</div>
-        <div>Please contact Sean Bruyere, meet coordinator, at <a class="link" href="mailto:sbruyer2@illinois.edu">sbruyer2@illinois.edu</a> or at <a class="link" href="illinoistfclub+meetcoord@gmail.com">illinoistfclub+meetcoord@gmail.com</a></div>
+        <div>Please contact Sean Bruyere, meet coordinator, at <a class="link" href="mailto:sbruyer2@illinois.edu">sbruyer2@illinois.edu</a> or at <a class="link" href="mailto:illinoistfclub+meetcoord@gmail.com">illinoistfclub+meetcoord@gmail.com</a></div>
       </div>
 
       <div class="info">
