Minor fixes, code cleanup, and commenting

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -1,3 +1,4 @@
+// Imports 'base' CSS that is used across the site
 @import 'utilities/variables';
 @import 'utilities/typography';
 @import 'utilities/table';
