--- a/app/styles/prospective_members.scss
+++ b/app/styles/prospective_members.scss
@@ -11,6 +11,7 @@
       margin-bottom: 10px;
     }
 
+    // Every div thats not the header
     div:not(.itc-h5) {
       @include body-text;
       margin-bottom: 15px;
