--- a/app/styles/utilities/_typography.scss
+++ b/app/styles/utilities/_typography.scss
@@ -13,16 +13,16 @@
 }
 
 @mixin large-body-text {
-  font-size: 22px;
+  font-size: 24px;
   line-height: 1.4;
   padding: 5px 0;
 
   @media (max-width: $break-sm) {
-    font-size: 20px;
+    font-size: 22px;
   }
 
   @media (max-width: $break-xs) {
-    font-size: 16px;
+    font-size: 18px;
   }
 }
 
@@ -78,12 +78,16 @@
   font-weight: 300;
 
   @media (max-width: $break-sm) {
-    font-size: 20px;
+    font-size: 22px;
   }
 
   @media (max-width: $break-xs) {
     font-size: 18px;
   }
+}
+
+.itc-bold {
+  font-weight: 700;
 }
 
 a, a:visited, a:hover {
