--- a/app/views/clubrelays.html
+++ b/app/views/clubrelays.html
@@ -4,7 +4,7 @@
     <div class="page-content">
       <div class="info">
         <div class="itc-h5"></div>
-        <div class="club-large">A special thanks to the 26 teams and over 570 athletes who made the 2016 Illinois Club Relays yet again the biggest meet ever! Each year this meet gets bigger and more competitive, as proven by the 8 new meet records broken this year. We look forward to seeing all the teams compete this year on <span class="emphasis">February 25th</span> at the 2017 Illinois Club Relays!</div>
+        <div class="club-large">A special thanks to the 26 teams and over 570 athletes who made the 2016 Illinois Club Relays yet again the biggest meet ever! Each year this meet gets bigger and more competitive, as proven by the 8 new meet records broken this year. We look forward to seeing all the teams compete this year on <span class="itc-bold">February 25th</span> at the 2017 Illinois Club Relays!</div>
         <div class="club-large"><a class="link" target="_blank" href="https://drive.google.com/open?id=0B9IJ7PBOO1nSRi1Kc3dDSlQyUmM">2016 Club Relays Results</a></div>
       </div>
 
