--- a/app/views/results.html
+++ b/app/views/results.html
@@ -17,11 +17,11 @@
             <div class="right" flex="30" flex-xs="20" ng-if="!performanceList.record.maleRecord">Event not contested</div>
             <div class="right" flex="10" flex-xs="20" ng-if="!performanceList.record.maleRecord"></div>
             <div class="right" flex="30" flex-xs="20" ng-if="performanceList.record.maleRecord"><span class="name" ng-repeat="athleteName in performanceList.record.maleRecord[0].athlete | relayNames">{{ ::athleteName }}</span></div>
-            <div class="right center-xs" flex="10" flex-xs="20" ng-if="performanceList.record.maleRecord"><span class="record-time">{{ ::performanceList.record.maleRecord[0].performance | xcTime }}</span></div>
+            <div class="right center-xs" flex="10" flex-xs="20" ng-if="performanceList.record.maleRecord"><span class="itc-bold">{{ ::performanceList.record.maleRecord[0].performance | xcTime }}</span></div>
             <div class="center" flex="20">{{ ::performanceList.name }}</div>
             <div class="right" flex="10" flex-xs="20" ng-if="!performanceList.record.femaleRecord"></div>
             <div class="left" flex="30" flex-xs="20" ng-if="!performanceList.record.femaleRecord">Event not contested</div>
-            <div class="left center-xs" flex="10" flex-xs="20" ng-if="performanceList.record.femaleRecord"><span class="record-time">{{ ::performanceList.record.femaleRecord[0].performance | xcTime }}</span></div>
+            <div class="left center-xs" flex="10" flex-xs="20" ng-if="performanceList.record.femaleRecord"><span class="itc-bold">{{ ::performanceList.record.femaleRecord[0].performance | xcTime }}</span></div>
             <div class="left" flex="30" flex-xs="20" ng-if="performanceList.record.femaleRecord"><span class="name" ng-repeat="athleteName in performanceList.record.femaleRecord[0].athlete | relayNames">{{ ::athleteName }}</span></div>
           </div>
           <md-divider ng-if="!$last" ng-repeat-end></md-divider>
@@ -42,11 +42,11 @@
             <div class="right" flex="30" flex-xs="20" ng-if="!performanceList.record.maleRecord">Event not contested</div>
             <div class="right" flex="10" flex-xs="20" ng-if="!performanceList.record.maleRecord"></div>
             <div class="right" flex="30" flex-xs="20" ng-if="performanceList.record.maleRecord"><span class="name" ng-repeat="athleteName in performanceList.record.maleRecord[0].athlete | relayNames">{{ ::athleteName }}</span></div>
-            <div class="right center-xs" flex="10" flex-xs="20" ng-if="performanceList.record.maleRecord"><span class="record-time">{{ ::performanceList.record.maleRecord[0].performance | trackTime }}</span></div>
+            <div class="right center-xs" flex="10" flex-xs="20" ng-if="performanceList.record.maleRecord"><span class="itc-bold">{{ ::performanceList.record.maleRecord[0].performance | trackTime }}</span></div>
             <div class="center" flex="20">{{ ::performanceList.name }}</div>
             <div class="right" flex="10" flex-xs="20" ng-if="!performanceList.record.femaleRecord"></div>
             <div class="left" flex="30" flex-xs="20" ng-if="!performanceList.record.femaleRecord">Event not contested</div>
-            <div class="left center-xs" flex="10" flex-xs="20" ng-if="performanceList.record.femaleRecord"><span class="record-time">{{ ::performanceList.record.femaleRecord[0].performance | trackTime }}</span></div>
+            <div class="left center-xs" flex="10" flex-xs="20" ng-if="performanceList.record.femaleRecord"><span class="itc-bold">{{ ::performanceList.record.femaleRecord[0].performance | trackTime }}</span></div>
             <div class="left" flex="30" flex-xs="20" ng-if="performanceList.record.femaleRecord"><span class="name" ng-repeat="athleteName in performanceList.record.femaleRecord[0].athlete | relayNames">{{ ::athleteName }}</span></div>
           </div>
           <md-divider ng-if="!$last" ng-repeat-end></md-divider>
@@ -67,11 +67,11 @@
             <div class="right" flex="30" flex-xs="20" ng-if="!performanceList.record.maleRecord">Event not contested</div>
             <div class="right" flex="10" flex-xs="20" ng-if="!performanceList.record.maleRecord"></div>
             <div class="right" flex="30" flex-xs="20" ng-if="performanceList.record.maleRecord"><span class="name" ng-repeat="athleteName in performanceList.record.maleRecord[0].athlete | relayNames">{{ ::athleteName }}</span></div>
-            <div class="right center-xs" flex="10" flex-xs="20" ng-if="performanceList.record.maleRecord"><span class="record-time">{{ ::performanceList.record.maleRecord[0].performance | trackTime }}</span></div>
+            <div class="right center-xs" flex="10" flex-xs="20" ng-if="performanceList.record.maleRecord"><span class="itc-bold">{{ ::performanceList.record.maleRecord[0].performance | trackTime }}</span></div>
             <div class="center" flex="20">{{ ::performanceList.name }}</div>
             <div class="right" flex="10" flex-xs="20" ng-if="!performanceList.record.femaleRecord"></div>
             <div class="left" flex="30" flex-xs="20" ng-if="!performanceList.record.femaleRecord">Event not contested</div>
-            <div class="left center-xs" flex="10" flex-xs="20" ng-if="performanceList.record.femaleRecord"><span class="record-time">{{ ::performanceList.record.femaleRecord[0].performance | trackTime }}</span></div>
+            <div class="left center-xs" flex="10" flex-xs="20" ng-if="performanceList.record.femaleRecord"><span class="itc-bold">{{ ::performanceList.record.femaleRecord[0].performance | trackTime }}</span></div>
             <div class="left" flex="30" flex-xs="20" ng-if="performanceList.record.femaleRecord"><span class="name" ng-repeat="athleteName in performanceList.record.femaleRecord[0].athlete | relayNames">{{ ::athleteName }}</span></div>
           </div>
           <md-divider ng-if="!$last" ng-repeat-end></md-divider>
@@ -95,7 +95,7 @@
                   </div>
                   <div class="table-row" layout="row" ng-if="performanceList.performances.maleRecords" ng-repeat-start="performance in performanceList.performances.maleRecords">
                     <div class="athlete-names" flex="70"><span class="name" ng-repeat="athleteName in performance.athlete | relayNames">{{ ::athleteName }}</span></div>
-                    <div class="record-time right" flex="30"><span class="record-span">{{ ::performance.performance | xcTime }}</span></div>
+                    <div class="itc-bold right" flex="30"><span class="record-span">{{ ::performance.performance | xcTime }}</span></div>
                   </div>
                   <md-divider ng-repeat-end></md-divider>
                 </div>
@@ -111,7 +111,7 @@
                   </div>
                   <div class="table-row" layout="row" ng-if="performanceList.performances.femaleRecords" ng-repeat-start="performance in performanceList.performances.femaleRecords">
                     <div class="athlete-names" flex="70"><span class="name" ng-repeat="athleteName in performance.athlete | relayNames">{{ ::athleteName }}</span></div>
-                    <div class="record-time right" flex="30"><span class="record-span">{{ ::performance.performance | xcTime }}</span></div>
+                    <div class="itc-bold right" flex="30"><span class="record-span">{{ ::performance.performance | xcTime }}</span></div>
                   </div>
                   <md-divider ng-repeat-end></md-divider>
                 </div>
@@ -135,7 +135,7 @@
                   </div>
                   <div class="table-row" layout="row" ng-if="performanceList.performances.maleRecords" ng-repeat-start="performance in performanceList.performances.maleRecords">
                     <div class="athlete-names" flex="70"><span class="name" ng-repeat="athleteName in performance.athlete | relayNames">{{ ::athleteName }}</span></div>
-                    <div class="record-time right" flex="30"><span class="record-span">{{ ::performance.performance | trackTime }}</span></div>
+                    <div class="itc-bold right" flex="30"><span class="record-span">{{ ::performance.performance | trackTime }}</span></div>
                   </div>
                   <md-divider ng-repeat-end></md-divider>
                 </div>
@@ -151,7 +151,7 @@
                   </div>
                   <div class="table-row" layout="row" ng-if="performanceList.performances.femaleRecords" ng-repeat-start="performance in performanceList.performances.femaleRecords">
                     <div class="athlete-names" flex="70"><span class="name" ng-repeat="athleteName in performance.athlete | relayNames">{{ ::athleteName }}</span></div>
-                    <div class="record-time right" flex="30"><span class="record-span">{{ ::performance.performance | trackTime }}</span></div>
+                    <div class="itc-bold right" flex="30"><span class="record-span">{{ ::performance.performance | trackTime }}</span></div>
                   </div>
                   <md-divider ng-repeat-end></md-divider>
                 </div>
@@ -175,7 +175,7 @@
                   </div>
                   <div class="table-row" layout="row" ng-if="performanceList.performances.maleRecords" ng-repeat-start="performance in performanceList.performances.maleRecords">
                     <div class="athlete-names" flex="70"><span class="name" ng-repeat="athleteName in performance.athlete | relayNames">{{ ::athleteName }}</span></div>
-                    <div class="record-time right" flex="30"><span class="record-span">{{ ::performance.performance | trackTime }}</span></div>
+                    <div class="itc-bold right" flex="30"><span class="record-span">{{ ::performance.performance | trackTime }}</span></div>
                   </div>
                   <md-divider ng-repeat-end></md-divider>
                 </div>
@@ -191,7 +191,7 @@
                   </div>
                   <div class="table-row" layout="row" ng-if="performanceList.performances.femaleRecords" ng-repeat-start="performance in performanceList.performances.femaleRecords">
                     <div class="athlete-names" flex="70"><span class="name" ng-repeat="athleteName in performance.athlete | relayNames">{{ ::athleteName }}</span></div>
-                    <div class="record-time right" flex="30"><span class="record-span">{{ ::performance.performance | trackTime }}</span></div>
+                    <div class="itc-bold right" flex="30"><span class="record-span">{{ ::performance.performance | trackTime }}</span></div>
                   </div>
                   <md-divider ng-repeat-end></md-divider>
                 </div>
@@ -293,8 +293,8 @@
               <md-divider></md-divider>
               <div class="table-row" layout="row" ng-repeat-start="result in results">
                 <div class="left" flex="70">{{ result.meet.date | date : 'yyyy' }} {{ result.meet.name }}</div>
-                <div class="record-time right" flex="30" ng-if="result.event.season == 'XC'">{{ result.performance | xcTime }}</div>
-                <div class="record-time right" flex="30" ng-if="result.event.season !== 'XC'">
+                <div class="itc-bold right" flex="30" ng-if="result.event.season == 'XC'">{{ result.performance | xcTime }}</div>
+                <div class="itc-bold right" flex="30" ng-if="result.event.season !== 'XC'">
                   <span ng-if="result.distanceResult">{{ result.performance | trackDist }}</span>
                   <span ng-if="!result.distanceResult">{{ result.performance | trackTime }}</span>
                 </div>
