--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,10 +2,10 @@
 	<div class="home-image-container"><img class="home-image" src="images/itc_front_banner.png" /></div>
 
 	<div class="social-bar-container" layout="row" layout-align="center center">
-		<a class="featured-icon social-bar facebook-bar" href="https://www.facebook.com/illinoisxctrackclub/"><i class="ion-social-facebook"></i></a>
-		<a class="featured-icon social-bar twitter-bar" href="https://twitter.com/IlliniTrackClub"><i class="ion-social-twitter"></i></a>
-		<a class="featured-icon social-bar instagram-bar" href="https://www.instagram.com/illinitrackclub/"><i class="ion-social-instagram-outline"></i></a>
-		<a class="featured-icon social-bar youtube-bar" href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow"><i class="ion-social-youtube"></i></a>
+		<a class="featured-icon social-bar facebook-bar" href="https://www.facebook.com/illinoisxctrackclub/" analytics-on="click" analytics-event="Went to Facebook page"><i class="ion-social-facebook"></i></a>
+		<a class="featured-icon social-bar twitter-bar" href="https://twitter.com/IlliniTrackClub" analytics-on="click" analytics-event="Went to Twitter page"><i class="ion-social-twitter"></i></a>
+		<a class="featured-icon social-bar instagram-bar" href="https://www.instagram.com/illinitrackclub/" analytics-on="click" analytics-event="Went to Instagram page"><i class="ion-social-instagram-outline"></i></a>
+		<a class="featured-icon social-bar youtube-bar" href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow" analytics-on="click" analytics-event="Went to YouTube page"><i class="ion-social-youtube"></i></a>
 	</div>
 
 	<div class="container about-container">
